// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`props props fill 1`] = `
initialize {
  "0": Object {
    "attribs": Object {
      "aria-hidden": "true",
      "class": "f-icon",
      "fill": "green",
      "style": "animation-duration:0ms",
    },
    "children": Array [
      Object {
        "attribs": Object {
          "href": "#add",
        },
        "children": Array [],
        "name": "use",
        "namespace": "http://www.w3.org/2000/svg",
        "next": null,
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {
          "href": "http://www.w3.org/1999/xlink",
        },
        "x-attribsPrefix": Object {
          "href": "xlink",
        },
      },
    ],
    "name": "svg",
    "namespace": "http://www.w3.org/2000/svg",
    "next": null,
    "parent": null,
    "prev": null,
    "root": Object {
      "attribs": Object {},
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "type": "tag",
    "x-attribsNamespace": Object {
      "aria-hidden": undefined,
      "class": undefined,
      "fill": undefined,
      "style": undefined,
    },
    "x-attribsPrefix": Object {
      "aria-hidden": undefined,
      "class": undefined,
      "fill": undefined,
      "style": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "normalizeWhitespace": false,
    "withDomLvl1": true,
    "xml": false,
  },
}
`;

exports[`props props interval 1`] = `
initialize {
  "0": Object {
    "attribs": Object {
      "aria-hidden": "true",
      "class": "f-icon f-icon-spin",
      "style": "animation-duration:500ms",
    },
    "children": Array [
      Object {
        "attribs": Object {
          "href": "#add",
        },
        "children": Array [],
        "name": "use",
        "namespace": "http://www.w3.org/2000/svg",
        "next": null,
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {
          "href": "http://www.w3.org/1999/xlink",
        },
        "x-attribsPrefix": Object {
          "href": "xlink",
        },
      },
    ],
    "name": "svg",
    "namespace": "http://www.w3.org/2000/svg",
    "next": null,
    "parent": null,
    "prev": null,
    "root": Object {
      "attribs": Object {},
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "type": "tag",
    "x-attribsNamespace": Object {
      "aria-hidden": undefined,
      "class": undefined,
      "style": undefined,
    },
    "x-attribsPrefix": Object {
      "aria-hidden": undefined,
      "class": undefined,
      "style": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "normalizeWhitespace": false,
    "withDomLvl1": true,
    "xml": false,
  },
}
`;

exports[`props props spin 1`] = `
initialize {
  "0": Object {
    "attribs": Object {
      "aria-hidden": "true",
      "class": "f-icon f-icon-spin",
      "style": "animation-duration:1800ms",
    },
    "children": Array [
      Object {
        "attribs": Object {
          "href": "#add",
        },
        "children": Array [],
        "name": "use",
        "namespace": "http://www.w3.org/2000/svg",
        "next": null,
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {
          "href": "http://www.w3.org/1999/xlink",
        },
        "x-attribsPrefix": Object {
          "href": "xlink",
        },
      },
    ],
    "name": "svg",
    "namespace": "http://www.w3.org/2000/svg",
    "next": null,
    "parent": null,
    "prev": null,
    "root": Object {
      "attribs": Object {},
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "type": "tag",
    "x-attribsNamespace": Object {
      "aria-hidden": undefined,
      "class": undefined,
      "style": undefined,
    },
    "x-attribsPrefix": Object {
      "aria-hidden": undefined,
      "class": undefined,
      "style": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "normalizeWhitespace": false,
    "withDomLvl1": true,
    "xml": false,
  },
}
`;

exports[`render render correctly 1`] = `
initialize {
  "0": Object {
    "attribs": Object {
      "aria-hidden": "true",
      "class": "f-icon",
      "style": "animation-duration:0ms",
    },
    "children": Array [
      Object {
        "attribs": Object {
          "href": "#add",
        },
        "children": Array [],
        "name": "use",
        "namespace": "http://www.w3.org/2000/svg",
        "next": null,
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {
          "href": "http://www.w3.org/1999/xlink",
        },
        "x-attribsPrefix": Object {
          "href": "xlink",
        },
      },
    ],
    "name": "svg",
    "namespace": "http://www.w3.org/2000/svg",
    "next": null,
    "parent": null,
    "prev": null,
    "root": Object {
      "attribs": Object {},
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "type": "tag",
    "x-attribsNamespace": Object {
      "aria-hidden": undefined,
      "class": undefined,
      "style": undefined,
    },
    "x-attribsPrefix": Object {
      "aria-hidden": undefined,
      "class": undefined,
      "style": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "normalizeWhitespace": false,
    "withDomLvl1": true,
    "xml": false,
  },
}
`;

exports[`render render loading 1`] = `
initialize {
  "0": Object {
    "attribs": Object {
      "aria-hidden": "true",
      "class": "f-icon f-icon-spin",
      "fill": "#1890ff",
      "style": "animation-duration:1200ms",
    },
    "children": Array [
      Object {
        "attribs": Object {
          "href": "#loading",
        },
        "children": Array [],
        "name": "use",
        "namespace": "http://www.w3.org/2000/svg",
        "next": null,
        "parent": [Circular],
        "prev": null,
        "type": "tag",
        "x-attribsNamespace": Object {
          "href": "http://www.w3.org/1999/xlink",
        },
        "x-attribsPrefix": Object {
          "href": "xlink",
        },
      },
    ],
    "name": "svg",
    "namespace": "http://www.w3.org/2000/svg",
    "next": null,
    "parent": null,
    "prev": null,
    "root": Object {
      "attribs": Object {},
      "children": Array [
        [Circular],
      ],
      "name": "root",
      "namespace": "http://www.w3.org/1999/xhtml",
      "next": null,
      "parent": null,
      "prev": null,
      "type": "root",
      "x-attribsNamespace": Object {},
      "x-attribsPrefix": Object {},
    },
    "type": "tag",
    "x-attribsNamespace": Object {
      "aria-hidden": undefined,
      "class": undefined,
      "fill": undefined,
      "style": undefined,
    },
    "x-attribsPrefix": Object {
      "aria-hidden": undefined,
      "class": undefined,
      "fill": undefined,
      "style": undefined,
    },
  },
  "_root": [Circular],
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "normalizeWhitespace": false,
    "withDomLvl1": true,
    "xml": false,
  },
}
`;
